samples/_failures_safe/1761446357_8331a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98574a75.c: In function ‘main’:
./samples/SAFE/__tmp_98574a75.c:148: error: expected ‘{’ at end of input
